tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_unreachable_match_case/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type `Opt<i32>` is recursive
  ┌─ src/main.nr:3:19
  │
3 │             match Opt::Some(Opt::Some(3)) {
  │                   --------- All types in Noir must have a known size at compile-time
  │

Aborting due to 1 previous error
